--- a/examples/config.json
+++ b/examples/config.json
@@ -22,6 +22,7 @@
   "weather_stations": [
     {
       "type": "DHT22",
+      "id": "dht-test-sensor",
       "pin": 14,
       "interval": [5, "s"],
       "target": ["10.0.0.30", 33474]
