Implement an interrupt vector for button use.

--- a/examples/config.json
+++ b/examples/config.json
@@ -11,10 +11,18 @@
     }
   },
 
-  "buttons": [],
+  "buttons": [
+
+  ],
+
   "switches": [],
+
   "motion_detectors": [],
+
+  "leds": [],
+
   "neopixels": [],
+
   "weather_stations": [
     {
       "type": "DHT22",
